# kv

./: .gitignore  Cargo.toml  abi.proto  build.rs
docs/: architecture.md
examples/: client.rs  dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
src/: error.rs  lib.rs
src/network/: frame.rs  mod.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
