[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.12.1"

[dependencies]
dashmap = "5.5.3"
http = "1.1.0"
prost = "0.12.1"
thiserror = "1.0.61"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.86"
# used to support higher versions of prost
async-prost = { git = "https://github.com/zhaopinglu/async-prost.git" }
futures = "0.3.30"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }
tracing-subscriber = "0.3.18"
