[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.12.1"

[dependencies]
bytes = "1.6.0"
dashmap = "5.5.3"
flate2 = "1.0.30"
http = "1.1.0"
prost = "0.12.1"
sled = "0.34.7"
thiserror = "1.0.61"
tracing = "0.1.40"
anyhow = "1.0.86"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.10.1"
# used to support higher versions of prost
async-prost = { git = "https://github.com/zhaopinglu/async-prost.git" }
futures = "0.3.30"
tokio-util = { version = "0.7.11", features = ["codec"] }
